# InpresAirport

./: .gitignore  CMakeLists.txt  CREATE_DATABASE.sql  CREATE_TABLES.sql  README.md  Tickets.csv  User.csv  config.conf  config.properties  initKeystores.sh  ssl.sh
Application_Bagages/: config.properties
Application_Bagages/src/Application_Bagages/: Application_Bagage.form  Application_Bagage.java  Application_Bagages.java  DetailsBagage.form  DetailsBagage.java  ListeBagages.form  ListeBagages.java  Liste_Bagages.form  Liste_Bagages.java  Login.form  Login.java  Main.java  liste_Bagages.form  liste_Bagages.java
Application_Billets/: config.properties
Application_Billets/src/Frame/: ApplicationFrame.java  Chargement.fxml  Login.fxml  LoginController.java  MainController.java  MainFrame.fxml  Voyageurs.fxml  VoyageursController.java
Application_FlightManagement/: config.properties  newvols.xml
Application_FlightManagement/src/: MainFrame.form  MainFrame.java
Application_Piste/: gradle.properties
Application_Piste/app/: build.gradle  temp
Application_Piste/gradle/wrapper/: gradle-wrapper.properties
Application_Test_JDBC/: config.properties
Application_Test_JDBC/src/: ajoutAgent.form  ajoutAgent.java  test_jdbc.form  test_jdbc.java
Application_Test_JDBC/src/Tools/: FilesOperations.java
Application_WEB/src/: LoginServlet.java
Application_WEB/src/Beans/: ConnectionB.java  ReservationB.java  UserB.java
Application_WEB/src/Enums/: ConnectionResult.java  ErrorField.java  Form.java
Application_WEB/src/Listener/: SessionListener.java
Application_WEB/src/Servlet/: CaddieServlet.java  LoginServlet.java  Servlet.java
Application_WEB/web/: JSPLogin.jsp  JSPTest.jsp  Login.html  caddie.jsp  error.jsp  footer.jsp  index.jsp  main.html  main.jsp  payment.jsp
Application_WEB/web/WEB-INF/: web.xml
Application_WEB/web/css/: style.css
Application_WEB/web/js/: caddie.js  main.js
Application_WEB/web/partials/: _layout.scss
Application_WEB_2/src/Filter/: ConnexionFilter.java
Application_WEB_2/src/Servlets/: LoginServlet.java  MainServlet.java
Application_WEB_2/src/Temp/: PropertiesReader.java  config.properties
Application_WEB_2/web/: Carte.jsp  ConfirmPlaces.jsp  DetailsPassagers.jsp  Login.jsp  NLogin.jsp  NewLog.jsp  Places.jsp  Vols.jsp  error.jsp  fail.jsp  index.jsp  temp  valide.jsp
C++/: CMakeLists.txt  Makefile  Tickets.csv  config.conf  makefile
C++/Application_CheckIn/: CMakeLists.txt  main.cpp
C++/Librairie/: CMakeLists.txt  Fonctions.cpp  Fonctions.h  Macro.h  Socket.cpp  Socket.h  SocketClient.cpp  SocketClient.h  SocketServeur.cpp  SocketServeur.h  Structs.h  Type.h  UdpMessage.cpp  UdpMessage.h  UdpSocket.cpp  UdpSocket.h  ipv4.cpp  ipv4.h
C++/Mail/: main.cpp
C++/Serveur_CheckIn/: FonctionServeur.cpp  FonctionServeur.h  main.cpp
Client/: main.cpp
InpresAirportChat/: config.properties
InpresAirportChat/src/Frame/: ChatFrame.form  ChatFrame.java  LoginFram.form  LoginFram.java
Librairie/: ConnexionException.cpp  ConnexionException.h  Exception.cpp  Exception.h  Fonctions.cpp  Fonctions.h  Socket.cpp  Socket.h  SocketClient.cpp  SocketClient.h  SocketServeur.cpp  SocketServeur.h  Structs.h  Type.cpp  Type.h  ipv4.cpp  ipv4.h
Librairie/src/IACOP/: TypeRequeteIACOP.java  TypeSpecialRequest.java
Librairie/src/LUGAP/: LUGAPThreadRequest.java  ReponseLUGAP.java  RequeteLUGAP.java  TypeReponseLUGAP.java  TypeRequeteLUGAP.java
Librairie/src/Librairie/: ListeTaches.java
Librairie/src/NetworkObject/: AESParams.java  Bagage.java  CryptedObject.java  CryptedPackage.java  Ids.java  Places.java  Question.java  Table.java  Vol.java
Librairie/src/TICKMAP/: ReponseTICKMAP.java  RequeteTICKMAP.java  SecureReponseTICKMAP.java  SecureRequeteTICKMAP.java  TickmapThreadRequest.java  TypeReponseTICKMAP.java  TypeRequeteTICKMAP.java
Librairie/src/Tools/: AESCryptedSocket.java  AsyncTask.java  Bd.java  (+10 more)
SQL/MySql/: CREATE_DATABASE.sql  CREATE_TABLES.sql  Database.sql  Select.sql  Tables.sql  Trigger.sql  Values.sql  create_values.sql  select.sql
SQL/Oracle/: Tables.sql  insert.sql  tables.sql  user.sql
Serveur/: FonctionServeur.cpp  FonctionServeur.h  main.cpp
ServeurChat/: config.properties
Serveur_Bagages/: config.properties  mysql.properties
Serveur_Billets/: config.properties
Serveur_CheckIn/: main.cpp
Serveur_FlightManagement/: config.properties
Serveur_MasterCard/: config.properties
Serveur_Payment/: config.properties
Web/web/: footer.jsp  header.jsp  index.jsp
src/: APPLICATION_TEST_JDBC.java  test_jdbc.form  test_jdbc.java
src/Tools/: FilesOperations.java
(+201 files in other folders)
